fix: scroll snap on mobile, header design, preload images

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,9 +7,10 @@
 
   height: 100vh;
   min-height: 900px;
-  transition: 1s;
+  transition: 2s;
   
   @include onDesktop {
+    border-radius: 0 0 0 200px;
     min-height: auto;
     max-height: 800px;
     justify-content: center;
@@ -34,6 +35,10 @@
   &__top {
     padding-inline: var(--page-padding);
     grid-column: 1 / -1;
+
+    @include onBigDesktop {
+      padding-inline: 0;
+    }
   }
 
   &__bottom {
@@ -78,7 +83,7 @@
       position: absolute;
       right: 0;
       bottom: 0;
-      top: 60px;
+      top: 120px;
       grid-column: 7 / -1;
     }
   }
