--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -40,12 +40,17 @@
       padding-block: 20px;
       display: block;
 
+      @include onDesktop {
+        padding-block: 48px;
+      }
+
       @include hover(opacity, 0.8);
       @include hover(transform, scale(1.2));
     }
   }
 
   &__hire-us {
+    text-transform: uppercase;
     position: absolute;
     right: 0;
     font-family: $accent-font;
