--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -8,18 +8,15 @@
   border-radius: 30px;
   background-size: cover;
   background-position: bottom;
-  transition: background-image 300ms, border-radius 1s;
+  transition: background-image 300ms;
   touch-action: pan-y pinch-zoom;
 
   $column-gap: 30px;
 
-  .header--inViewport & {
-    border-end-end-radius: 0;
-  }
-
   @include onDesktop {
     background-position: center;
-    border-radius: 30px 0 30px 30px;
+    padding: 48px;
+    border-radius: 200px 0 0;
     width: calc(50vw - 18.1px);
   }
 
@@ -32,6 +29,13 @@
   &__content {
     display: flex;
     flex-direction: column;
+
+    @include onDesktop {
+      flex-direction: row;
+      gap: 24px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
   }
 
   &__buttons {
@@ -60,8 +64,18 @@
     }
   }
 
+  &__text {
+    display: flex;
+    flex-direction: column;
+    padding-top: 18px;
+    gap: 8px;
+
+    @include onDesktop {
+      padding-top: 0;
+    }
+  }
+
   &__img-name {
-    margin-block: 16px 8px;
     color: $c-white;
     text-transform: uppercase;
     font-family: $accent-font;
@@ -72,6 +86,7 @@
   }
 
   &__img-desc {
+    max-width: 264px;
     color: $c-white;
     font-family: $main-font;
     font-size: 14px;
