--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -13,6 +13,7 @@ html {
 body {
   background: $c-white;
   scroll-behavior: smooth;
+  background-color: $c-main;
 }
 
 a {
